assets/css/style.css
* {
    margin-top: 0;
    padding: 0;
}

.btn {
    background-color:yellow;
    color:black;
}

i {
    color:black;
    margin-right: 1rem;
}

/*navbar*/
nav {
    border-bottom: 2px solid whitesmoke;
}

.navbar-toggler {
    border-color: rgba(0,0,0,0)!important;
}

nav img {
    width:11rem;
}

/*callout*/
article {
    width:100%;
}

#callout {
    margin-top: 110px;
}

#callout div{
    padding:0;
    text-align: center;
    font-size: 14px;
}

#callout p {
    padding-top: 6px;
}

#callout img {
    width:100%;
}

/*reviews*/
.reviews {
    background-color:#5A31AD;
}

#carousel-buttons{
    height:210px;
}

.carousel-inner{
    background-color: white;
    width:90%;
    margin: 0 auto;
    height: 18rem;
    border-radius: 20px;
    top: -7rem;
    text-align: center;
}

.carousel-inner h4 {
    padding: 8px 0;
}

.carousel-indicators {
    bottom: 2rem;
}

.carousel-indicators li {
    background-color:yellow;
    
}

/*About us*/
.about-us {
    text-align: center;
}

video {
    width:100%;
}

/*Achievements*/
.achievements{
    background-color:#5A31AD;
}

.card {
    width:100%;
    height: 150px;
    padding: 1rem;
}

.card p {
    text-align:center;
}

/* Our Values */
.our-values-section .col-12 {
    width:100%;
}

.our-values {
    text-align:center;
}

.our-values-img img{
    width:100%;
}

/* Gallery */
#gallery-header {
    margin-top:120px!important;
    margin: 0 auto;
    text-align: center;
    width: 80%;
}

.gallery-container {
    width: 100%;
}

.gallery-border {
    width:100%;
}

.gallery-container p {
    text-align:center;
    font-weight: bold;
    font-size:15px;
}

.gallery-container a {
    color:white;
    text-decoration: 2px yellow underline;
}

.gallery-row {
    background-color: #5A31AD;
}

.gallery-section {
    width:100%;
}

.gallery-images {
    padding-bottom:2px;
}

.gallery-images img {
    padding:4px;
    border-radius:8%;
}

.gallery-images p{
    text-align:center;
    color:white;
    font-size: 14px;
}

/* Contact Us */

.contact-us-header {
    margin-top:110px!important;
    width:250px;
    margin: 0 auto;
}

.contact-us-header h4 {
    text-align: center;
}

.contact-us-header ul {
    list-style-type: none;
    padding:10px 0 0 35px;
}

/* Form */

.form-section {
    width:100%;
}

form {
    background-color:#5A31AD;
}

form h4 {
    text-align: center;

}

form button{
    padding: 0 20px;
}

form textarea {
    resize:none;
    height: 7rem!important;
}

.form-map input {
    width: 50%;
    height:2rem;
}

.map-search {
    width:100%;
}

iframe {
    width:100%;
}


/*footer*/
footer {
    background-color:lightgrey;
    height: 50px;
}

.social-icons {
    width:100%;
    margin: 0 auto;
    padding-top: 13px;
}

.social-icons li {
    width:24%;
    text-align: center;
    display:inline-block;
}


.social-icons li a {
    color:darkslategrey;
}

/*responsive*/
@media (min-width: 992px) {
    .gallery-row{
        background-color:white;
    }

    .gallery-border {
        display: none;
    }

    .gallery-container a {
        color:black;
        text-decoration: underline #5A31AD 2px;
    }

    


}

